# model/authentication.model.go
@@ -1,0 +1,6 @@
+package model
+
+type AuthenticationRequest struct {
+	Username string
+	Password string
+}
