# route/authentication.route.go
@@ -1,0 +1,11 @@
+package route
+
+import (
+	"WebAPI/handler"
+	"github.com/gin-gonic/gin"
+)
+
+func AuthenticationRoute(versionRoute *gin.RouterGroup) {
+	versionRoute.POST("/register", handler.RegistrationHandler)
+	versionRoute.POST("/login")
+}
